Update CSS styles and navbar structure for improved design consistency

--- a/app_public/templates/public/about.html
+++ b/app_public/templates/public/about.html
@@ -9,7 +9,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="{% static 'images/favicon.png' %}"
+      href="{% static 'images/favicon.ico' %}"
     />
     <link rel="stylesheet" href="{% static 'public/css/general.css' %}" />
     <link rel="stylesheet" href="{% static 'public/css/about.css' %}" />
