--- a/app_public/templates/public/include/navbar.html
+++ b/app_public/templates/public/include/navbar.html
@@ -11,7 +11,7 @@
 {% endcomment %}
 
 <nav class="navbar">
-  <div><img alt="logo" src="{% static 'images/icon.png' %}" /></div>
+  <div><img class="logo" alt="logo" src="{% static 'images/icon.png' %}" /></div>
   <ul>
     <li><a href="{% url 'home' %}">Home</a></li>
     <li><a href="{% url 'about' %}">About</a></li>
