--- a/app_public/static/public/css/general.css
+++ b/app_public/static/public/css/general.css
@@ -1,8 +1,10 @@
 :root {
   --primary-color: #3498db;
-  --secondary-color: #2ecc71;
+  --secondary-color: #F2994A;
   --font-color: #333333;
-  --background-color: #f5f5f5;
+  --btn-color: #F27D16;
+  --background-color: #FFF8F0;
+  --link-color: #0A5DA6;
   --border-radius: 5px;
 }
 * {
@@ -12,23 +14,33 @@
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'poppins',open sans-serif;
   color: var(--font-color);
   background-color: var(--background-color);
   line-height: 1.6;
 }
 
 nav.navbar {
-  background-color: navy;
+    display: flex;
+  background-color: rgb(17, 17, 17);
+  justify-content: space-between;
   padding: 1rem;
 }
 nav.navbar ul {
   list-style: none;
   display: flex;
-  justify-content: space-between;
+    gap: 1rem;
+    
 }
 nav.navbar ul li a {
   color: #fff;
   text-decoration: none;
   font-weight: bold;
+  justify-content: center;
+ 
+}
+
+nav div .logo {
+  width: 200px;
+  height: 50px;
 }
