--- a/app_accounts/templates/accounts/login.html
+++ b/app_accounts/templates/accounts/login.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="{% static 'public/images/favicon.ico' %}" />
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" />
     <title>Campus Connect | Login</title>
     <link rel="stylesheet" href="{% static 'accounts/css/styles.css' %}" />
    
