--- a/app_public/templates/public/about.html
+++ b/app_public/templates/public/about.html
@@ -102,7 +102,11 @@ As CampusConnect grows, we aim to introduce more interactive features — from s
 
 
 </div>
+
     </main>
+    <footer>
+      <p>&copy; 2025 Campus Connect</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'public/js/main.js' %}"></script>
   </body>
