--- a/app_public/static/public/css/general.css
+++ b/app_public/static/public/css/general.css
@@ -30,13 +30,13 @@ nav ul {
   list-style-type: none !important;
 }
 
-nav .nav-link {
+nav .navlinks {
   color: #00447c !important;
   font-weight: bold;
   font-size: 16px;
   margin-right: 15px;
 }
-nav .nav-link:hover {
+nav .navlinks:hover {
   color: var(--primary-color) !important;
 }
 
